syntax = "proto3";

option go_package = "github.com/shyu61/nest-sand-backend";

package proto;

service AuthorService {
  rpc GetAuthor(GetAuthorRequest) returns (GetAuthorResponse) {}
}

message GetAuthorRequest {
  string id = 1;
}

message GetAuthorResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
}
